--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 # Sample environment variables for device_simulator.py
+# Replace 'your-api-endpoint' with your actual API Gateway endpoint URL after deployment.
 
 API_ENDPOINT=https://your-api-endpoint.amazonaws.com/prod
+DEVICE_ID=device-001
+SEND_INTERVAL=5  # Interval in seconds between data sends
