--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,12 @@
 # Sample environment variables for device_simulator.py
 # Replace 'your-api-endpoint' with your actual API Gateway endpoint URL after deployment.
 
-API_ENDPOINT=https://your-api-endpoint.amazonaws.com/prod
+API_ENDPOINT=http://your-api-endpoint.com
 DEVICE_ID=device-001
-SEND_INTERVAL=5  # Interval in seconds between data sends
+SEND_INTERVAL=5
+
+# AWS Resources
+SNS_TOPIC_ARN=arn:aws:sns:region:account-id:topic-name
+CONFIG_BUCKET=your-config-bucket-name
+CONFIG_KEY=config.json
+DYNAMODB_TABLE=SensorDataTable
