--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ DEVICE_ID=device-001
 SEND_INTERVAL=5
 
 # AWS Resources
-SNS_TOPIC_ARN=arn:aws:sns:region:account-id:topic-name
+SNS_TOPIC_ARN=arn:aws:sns:region:account-id:SensorAlertTopic
 CONFIG_BUCKET=your-config-bucket-name
 CONFIG_KEY=config.json
 DYNAMODB_TABLE=SensorDataTable
