--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,11 @@ Thumbs.db
 
 # Other unneeded files
 *.bak
+
+# Ignore Lambda deployment packages
+src/lambda_functions/lambda_functions.zip
+infrastructure/code.zip
+
+# Ignore microcontroller firmware cache and build artifacts
+src/microcontroller_firmware/__pycache__/
+src/microcontroller_firmware/*.pyc
