--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ This file lists all the Python packages required for the project. To install the
 boto3
 requests
 python-dotenv
+
+# Added dependencies for hardware interfaces
 smbus2
 spidev
 pyserial
