chore: Update requirements.txt to include project description and installation instructions

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-This file lists all the Python packages required for the project. To install the dependencies, users can run: `pip install -r requirements.txt`.
+# This file lists all the Python packages required for the project. To install the dependencies, users can run: `pip install -r requirements.txt`.
 
 boto3
 requests
